# energypulse

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/energypulse/: __init__.py  cli.py  models.py  storage.py
src/energypulse/dashboard/: __init__.py  app.py
src/energypulse/ingestion/: __init__.py  energy.py  weather.py
src/energypulse/metrics/: __init__.py  definitions.py
src/energypulse/quality/: __init__.py  checks.py
tests/: __init__.py  test_energy_simulator.py  test_metrics.py  test_models.py  test_quality.py
