[project]
name = "energypulse"
version = "0.1.0"
description = "End-to-end data pipeline: Weather API → Quality Checks → Metrics → Dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "duckdb>=1.0.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "structlog>=24.4.0",
    "streamlit>=1.37.0",
    "plotly>=5.22.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
energypulse = "energypulse.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/energypulse"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]  # Allow function calls in argument defaults (standard Typer pattern)

[tool.mypy]
python_version = "3.11"
warn_return_any = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
